potential fix for safari ipad overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
+  overflow-x: hidden;
 }
 
 html {
